--- a/index.html
+++ b/index.html
@@ -116,7 +116,15 @@
         <ellipse cx="70" cy="60" rx="40" ry="25" fill="url(#shine)" />
       </svg>
     </div>
-    <div class="message" id="message">كل سنه وانتي طيبه يقلبي وعقبال مليون سنه واحنا اصحاب وحبايب كده علطول ونفضل مع بعض علطول يقلبي 😘😘</div>
+    <div class="message" id="message">كل سنة و إنتي طيبة يا أجمل وأغلى حد ❤️
+عارفة إحنا بقانا سنتين عارفين بعض؟ والله كأنهم عدى يومين… بس في السنتين دول أنا شفت قد إيه إنتي إنسانة مميزة، قلبك كبير و طيبه اوي
+النهارده مش أي يوم، النهارده اليوم اللي الدنيا نورت بيكي يقلبي. أنا بجد مبسوط إني كنت جزء صغير من حياتك في السنين اللي فاتوا، وإننا قعدنا مع بعض حته وحنا م جنب بعض 
+
+يا رب السنة دي تبقى مختلفة، مليانة فرح ونجاح، وكل حاجة نفسك فيها تتحقق. ويا رب تفضلي زي ما إنتي دايمًا، بريئة، طيبة، وبتحبي الخير لكل الناس.
+
+أنا عارف إن الكلام مش هيكفي أوصف قد إيه إنتي غالية، بس اللي متأكد منه إنك كنتي من احلي الحجات الي قلتها… إنتي حد بقى له مكان كبير أوي في حياتي.
+
+كل سنة و انتي بخير، وكل سنة و إنتي منوّرة، ويا رب تفضلي مبسوطة على طول. 🎂✨</div>
     <div class="floating-layer" id="floatingLayer"></div>
   </div>
 
@@ -188,4 +196,5 @@
     });
   </script>
 </body>
+
 </html>
