--- a/index.html
+++ b/index.html
@@ -116,11 +116,7 @@
         <ellipse cx="70" cy="60" rx="40" ry="25" fill="url(#shine)" />
       </svg>
     </div>
-    <div class="message" id="message" style="font-size: 12px;">كل سنة و إنتي طيبة يا أجمل وأغلى حد ❤️
-عارفة إحنا بقانا سنتين عارفين بعض؟ والله كأنهم عدى يومين… بس في السنتين دول أنا شفت قد إيه إنتي إنسانة مميزة، قلبك كبير و طيبه اوي
-النهارده مش أي يوم، النهارده اليوم اللي الدنيا نورت بيكي يقلبي. أنا بجد مبسوط إني كنت جزء صغير من حياتك في السنين اللي فاتوا، وإننا قعدنا مع بعض حته وحنا م جنب بعض
-أنا عارف إن الكلام مش هيكفي أوصف قد إيه إنتي غالية، بس اللي متأكد منه إنك كنتي من احلي الحجات الي قبلتها… إنتي حد بقى له مكان كبير أوي في حياتي.
-. 🎂✨</div>
+    <div class="message" id="message" style="font-size: 12px;">ز</div>
     <div class="floating-layer" id="floatingLayer"></div>
   </div>
 
@@ -194,6 +190,7 @@
 </body>
 
 </html>
+
 
 
 
